@@ -1,3 +1,13 @@
+2008-01-18  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Changelog.pm (parse_changelog): Rewrite it completely
+	to not call dpkg-parsechangelog but do the work of this program by itself.
+	* scripts/dpkg-parsechangelog.pl: Rewrote it to use the enhanced
+	parse_changelog() function.
+	* scripts/dpkg-genchanges.pl, script/dpkg-gencontrol.pl: Adapted to use
+	the modified parse_changelog().
+	* scripts/dpkg-gensymbols.pl, scripts/dpkg-source.pl: Likewise.
+
 2008-01-18  Guillem Jover  <guillem@debian.org>
 
 	* m4/arch.m4 (_DPKG_ARCHITECTURE): Do not use backticks inside double
